tests/snapshots/ast_tests__return.snap
---
source: tests/ast_tests.rs
assertion_line: 29
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: If {
                        condition: Literal {
                            typ: (),
                            value: "false",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Literal {
                                        typ: (),
                                        value: "1",
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: ElseIf {
                        condition: Literal {
                            typ: (),
                            value: "true",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Literal {
                                        typ: (),
                                        value: "2",
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Else,
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Literal {
                                        typ: (),
                                        value: "3",
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
